--- a/.gitignore
+++ b/.gitignore
@@ -14,8 +14,8 @@
 # Add items to be ignored below                                                 #
 #################################################################################
 
-/Output/Ivan/HTML5/Output
-/Output/Ivan/HTML5/Analyzer
-/Output/Ivan/HTML5/FileSync
-/Output/Ivan/HTML5/Project/Users
-/Output/Ivan/HTML5/.svn
+# /Output/Ivan/HTML5/Output
+# /Output/Ivan/HTML5/Analyzer
+# /Output/Ivan/HTML5/FileSync
+# /Output/Ivan/HTML5/Project/Users
+# /Output/Ivan/HTML5/.svn
