--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@
 # Add items to be ignored below                                                 #
 #################################################################################
 
-/Output
-/Analyzer
-/FileSync
-/Project/Users
-/.svn
+# /Output
+# /Analyzer
+# /FileSync
+# /Project/Users
+# /.svn
